--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>curso mobile first</title>
+
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
+    <header class="cabecalho">
+        <span class="cabecalho"_menu-hamburguer></span>
+
+        <img src="img/Logo.svg" alt="logomarca">
+
+        <a href="#"><img src="img/Favoritos.svg" alt="meus Favoritos"></a>
+
+        <a href="#"><img src="img/Emprestimos.svg" alt="meus Emprestimos"></a>
+
+        <a href="#"><img src="img/Usuario.svg" alt="meu perfil"></a>
+    </header>
+ 
+
     
 </body>
+
 </html>
